@@ -1,5 +1,5 @@
 README:  Tk
-    This is the Tk 8.6b2 source distribution.
+    This is the Tk 8.6b3 source distribution.
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
     link at the above URL.
